web-infras/parser/tests/fixtures/esprima/ES6/object-initialiser/invalid-proto-setter-literal-identifier/output.txt
[SyntaxError]: property name __proto__ appears more than once in object literal (1,43)
1|({ set __proto__(x){}, "__proto__": null, __proto__: null, })
 |                                         ^
